# apollo-platform

ros/ros_comm/rosbag_recorderlib/: CMakeLists.txt
ros/ros_comm/rosbag_recorderlib/include/rosbag/: recorder.h
ros/ros_comm/rosbag_recorderlib/src/: recorder.cpp
